--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -43,14 +43,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.3'
 	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
-	implementation 'org.liquibase:liquibase-core:4.17.2'
+	implementation 'org.liquibase:liquibase-core'
+//	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.nimbusds:nimbus-jose-jwt:9.25.6'
-//	implementation 'com.jayway.jsonpath:json-path:2.4.0'
-	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.0'
-	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.3.0.202209071007-r'
-	implementation 'wsdl4j:wsdl4j:1.6.3'
+	implementation 'com.jayway.jsonpath:json-path:2.4.0'
+	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r'
+	implementation 'wsdl4j:wsdl4j:1.6.2'
 	implementation 'commons-io:commons-io:2.11.0'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	runtimeOnly 'mysql:mysql-connector-java'
