--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -43,14 +43,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.3'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'com.jayway.jsonpath:json-path:2.4.0'
+	implementation 'com.nimbusds:nimbus-jose-jwt:9.25.6'
 	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r'
-	implementation 'wsdl4j:wsdl4j:1.6.2'
-	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
+	implementation 'wsdl4j:wsdl4j:1.6.3'
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
